--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Curso Git</h1>
+    <p>Esto es un párrafo de ejemplo</p>
 </body>
 </html>
