Párrafo y hoja de estilo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Git</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
-    <h1>Curso Git</h1>
-    <p>Esto es un párrafo de ejemplo</p>
+    <h1>Academia de Comunicaciones</h1>
+    <p>Le estoy agregando estilos</p>
 </body>
 </html>
